Added swagger documentation for all image-related requests.
